--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <!-- Navigation -->
     <nav class="navbar">
-        <div class="logo">Malasila National (VTHS) " </div>
+        <div class="logo">Malasila National High School " </div>
         <ul class="nav-links">
             <li><a href="#majors">Majors</a></li>
             <li><a href="#events">Events</a></li>
