--- a/index.html
+++ b/index.html
@@ -1,40 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My School - Home</title>
-    <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>My School - Home</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <!-- Navbar -->
-    <nav class="navbar">
-        <div class="logo">My School</div>
-        <ul class="nav-links">
-            <li><a href="index.html">Home</a></li>
-            <li><a href="majors.html">Majors</a></li>
-            <li><a href="events.html">Events</a></li>
-            <li><a href="login.html">Login</a></li>
-        </ul>
-    </nav>
+  <!-- Navbar -->
+  <nav class="navbar">
+    <div class="logo">My School</div>
+    <ul class="nav-links">
+      <li><a href="index.html">Home</a></li>
+      <li><a href="majors.html">Majors</a></li>
+      <li><a href="events.html">Events</a></li>
+      <li><a href="login.html">Login</a></li>
+    </ul>
+  </nav>
 
-    <!-- Hero Section -->
-    <header class="hero">
-        <h1>Welcome to Our School!</h1>
-        <p>Explore our amazing majors and exciting events. Learn, create, and succeed!</p>
-        <div class="hero-buttons">
-            <a href="majors.html" class="btn">Explore Majors</a>
-            <a href="events.html" class="btn">View Events</a>
-        </div>
-    </header>
+  <!-- Hero Section -->
+  <header class="hero">
+    <h1>Welcome to Our School!</h1>
+    <p>Explore our amazing majors and exciting events. Learn, create, and succeed!</p>
+    <div class="hero-buttons">
+      <a href="majors.html" class="btn">Explore Majors</a>
+      <a href="events.html" class="btn">View Events</a>
+    </div>
+  </header>
 
-    <!-- School Description -->
-    <section class="description-section">
-       
-    <footer>
-        <p>&copy; 2025 My School. All rights reserved.</p>
-    </footer>
+  <!-- Short Description -->
+  <section class="description-section">
+    <p>Welcome to My School! Explore our hands-on programs in Electronics, Computer Servicing, Dressmaking, and Cookery. Gain skills, creativity, and real-world experience!</p>
+  </section>
 
-    <script src="script.js"></script>
+  <footer>
+    <p>&copy; 2025 My School. All rights reserved.</p>
+  </footer>
+
+  <script src="script.js"></script>
 </body>
 </html>
