--- a/majors.html
+++ b/majors.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 <nav class="navbar">
-<div class="logo">My School</div>
+<div class="logo">MNVHS</div>
 <ul class="nav-links">
 <li><a href="index.html">Home</a></li>
 <li><a href="majors.html">Majors</a></li>
@@ -34,6 +34,11 @@
 <div class="major-card">
 <h3>Cookery</h3>
 <p>Learn culinary arts, meal preparation, baking, and food presentation to delight taste buds.</p>
+  <h3> EXAMPLE</h3>
+<p>EXAMPLE</p>
+   <h3> EXAMPLE</h3>
+<p>EXAMPLE</p>
+
 </div>
 </div>
 </section>
