--- a/majors.html
+++ b/majors.html
@@ -34,10 +34,10 @@
 <div class="major-card">
 <h3>Cookery</h3>
 <p>Learn culinary arts, meal preparation, baking, and food presentation to delight taste buds.</p>
-  <h3> EXAMPLE</h3>
-<p>EXAMPLE</p>
-   <h3> EXAMPLE</h3>
-<p>EXAMPLE</p>
+  <div class="major-card">
+<h3>Example</h3>
+<p>Example </p>
+
 
 </div>
 </div>
