--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <nav class="navbar">
-    <div class="logo">My School</div>
+    <div class="logo">Malasila National Vocational and Technological High School</div>
     <ul class="nav-links">
       <li><a href="index.html">Home</a></li>
       <li><a href="majors.html">Majors</a></li>
